<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bg_white">

    <RelativeLayout
        android:id="@+id/ly_top_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_topbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_topbar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/news_item_add"
                android:scaleType="fitXY"
                android:onClick="onBtnAdd"/>
            <TextView
                android:id="@+id/txt_topbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/btn_topbar"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/text_topbar"
                android:textSize="18sp" />

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_alignParentBottom="true"
            android:background="@color/div_white" />

    </RelativeLayout>


    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_news_list"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_news_list"
            android:text="@string/tab_news_list"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/rb_bookmark_list"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_bookmark_list"
            android:text="@string/tab_bookmark_list"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/rb_my_post_list"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_bookmark_list"
            android:text="@string/tab_my_post"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/rb_setting"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_setting"
            android:text="@string/tab_menu_setting"
            android:textSize="16sp"/>

    </RadioGroup>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_above="@id/rg_tab_bar"
        android:background="@color/div_white" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/div_tab_bar"
        android:layout_below="@id/ly_top_bar" />


</RelativeLayout>
